# indicator-service

./: .gitignore  README.md  indicator_lookback.json  indicators.json  pyproject.toml
src/ta_engine/: __init__.py  __main__.py  config.py  engine.py  indicators.py  logging_config.py  models.py  redis_io.py  test_engine.py
tests/: test_engine.py  test_indicators.py  test_lookback.py  test_schedule.py
